<resources>
    <string name="app_name">UD MR Putra</string>
    <string name="slide_persediaan">UD MR Putra telah memperkenalkan fitur pengajuan barang untuk meningkatkan kenyamanan mitra dalam memesan produk</string>
    <string name="next_btn">Lanjut ></string>
    <string name="kelola_persediaan_barang">Kelola Persediaan Barang</string>
    <string name="skip"><![CDATA[Lewati >]]></string>
    <string name="menu">Masuk</string>
    <string name="slide_tracking">Lacak pengiriman dengan mudah tanpa batas. Dapatkan kemudahan  dan pastikan setiap pengiriman sukses sampai ke tujuan</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fab_add_activity">fab activity\n</string>
    <string name="title_profile">Profil</string>
    <string name="title_activity">Activity</string>
    <string name="title_gas_station">Pencatatan</string>
    <string name="title_settings">Pengaturan</string>
    <string name="title_tracking">Pengiriman</string>
    <string name="message">%1$s diklik!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_barang">Stok  Barang</string>
    <string name="tab_text_1">Masuk</string>
    <string name="tab_text_2">Keluar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="action_bar_maps">Detail Pengiriman</string>
    <string name="enable_location_message">Fitur lokasi dinonaktifkan. Apakah Anda ingin mengaktifkannya?</string>
    <string name="yes">Ya</string>
    <string name="slider">slider\n</string>
    <string name="detail_pengiriman">Detail Pengiriman</string>
    <string name="namaField">Masukan nama</string>
    <string name="emailField">Masukan alamat email</string>
    <string name="sandiField">Masukan kata sandi</string>
    <string name="konfirmasiField">Masukan kembali kata sandi</string>
    <string name="nomorField">Masukan nomor HP</string>
    <string name="api_key">AIzaSyAlsEppzLKiH2dnUTVEwKJaBIMqYo4zhrc</string>
    <string name="logout">Keluar</string>
    <string name="title_dark_mode">Mode Hitam</string>
    <string name="desc_dark_mode">Ganti ke tema hitam</string>
    <string name="title_pengiriman">Pengiriman</string>
    <string name="title_activity_daftar_sopir">DaftarSopir</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="action_bar_mitra">Daftar Mitra</string>
    <string name="action_bar_supir">Daftar supir</string>
    <string name="supir_maps">Maps Supir</string>
    <string name="start_point">start</string>
    <string name="start_running">start</string>
    <string name="stop_running">stop</string>
    <string name="title_activity_stock_barang">Stok Barang</string>
    <string name="title_notification">Notifikasi</string>
    <string name="desc_notification">Nyalakan Notifikasi</string>
    <string name="title_profil">Profil</string>
    <string name="title_pencatatan">Pencatatan</string>
    <string name="preview_image_view">Preview Image View</string>
    <string name="increment">btn tambah</string>
    <string name="action_bar_detail">Detail Barang</string>
    <string name="address_not_found">alamat tidak di temukan</string>
    <string name="action_bar_detail_pencatatan">Detail Pencatatan</string>
    <string name="slide_udmr_putra">UD MR Putra adalah usaha dagang yang bergerak dalam distribusi sayur dan buah segar. Mengutamakan kualitas dan kesegaran, UD. MR Putra mendapatkan produk langsung dari petani lokal, memastikan bahwa setiap pengiriman memenuhi standar tinggi.</string>
    <string name="approval">Approval</string>
    <string name="fcm_message">berhasil</string>
    <string name="default_notification_channel_id">UD MR PUTRA</string>
    <string name="filter_status">Filter Status</string>
    <string name="filter_tanggal">Filter Tanggal</string>
    <string name="verifikasi_pengajuan">Verifikasi Pengajuan</string>
    <string name="belum_ada_riwayat">Belum ada riwayat</string>
    <string name="nama_petani">Nama Petani</string>
    <string name="jenis">Jenis</string>
    <string name="nama">Nama</string>
    <string name="kategori">Kategori</string>
    <string name="jumlah">Jumlah</string>
    <string name="harga_beli">Harga Beli</string>
    <string name="tanggal">Tanggal</string>
    <string name="catatan">Catatan</string>
    <string name="tidak_ada_pengajuan">Tidak ada Pengajuan</string>
    <string name="tidak_ada_pengiriman">Tidak ada pengiriman</string>
    <string name="username">username</string>
    <string name="titikdua">:</string>
    <string name="lokasi_saat_ini">Lokasi saat ini</string>
    <string name="prediksi_waktu">Prediksi Waktu</string>
    <string name="pengiriman">Pengiriman</string>
    <string name="mohon_isi_data_dibawah_ini_dengan_benar">Mohon isi data dibawah ini dengan benar</string>
    <string name="nama_supir">Nama supir</string>
    <string name="alamat">Alamat</string>
    <string name="masuk">Masuk</string>
    <string name="search">Search</string>
    <string name="cari">Cari</string>
    <string name="set_lokasi">Set Lokasi</string>
    <string name="pilih_pengajuan">Pilih Pengajuan</string>
    <string name="nama_pengjuan">Nama Pengjuan</string>
    <string name="lokasi">Lokasi</string>
    <string name="pengajuan">Pengajuan</string>
    <string name="masukan_catatan">Masukan catatan</string>
    <string name="x25bc">▼</string>
    <string name="forgot_password">Lupa kata sandi?</string>


    <string-array name="jenis_barang">
        <item>Sayur</item>
        <item>Buah</item>
    </string-array>
    <string-array name="filter_tanggal_array">
        <item>Semua</item>
        <item>Hari Ini</item>
        <item>Minggu Ini</item>
        <item>Bulan Ini</item>
    </string-array>

</resources>