<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/title_home" />

        <item
            android:id="@+id/navigation_pencatatan"
            android:icon="@drawable/ic_truck"
            android:title="@string/title_tracking" />

        <item
            android:id="@+id/navigation_add_activity"
            android:title="" />

        <item
            android:id="@+id/navigation_pengiriman"
            android:icon="@drawable/baseline_note_24"
            android:title="@string/approval" />
        <item
            android:id="@+id/navigation_pengaturan"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/title_profil" />
</menu>