<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tugasakhir.udmrputra.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_pencatatan" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_pengiriman" />
        <action
            android:id="@+id/action_navigation_home_to_pengaturanFragment"
            app:destination="@id/navigation_pengaturan" />
    </fragment>

    <fragment
        android:id="@+id/navigation_pencatatan"
        android:name="com.tugasakhir.udmrputra.ui.pengiriman.PengirimanFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_pengiriman"
        android:name="com.tugasakhir.udmrputra.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_pengaturan"
        android:name="com.tugasakhir.udmrputra.ui.pengaturan.PengaturanFragment"
        android:label="fragment_pengaturan"
        tools:layout="@layout/fragment_pengaturan" />
</navigation>