<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/fui_transparent"
            app:navigationIcon="@drawable/ic_back">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:text="@string/pengiriman"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@string/tanggal"
                    android:src="@drawable/ic_info" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/mohon_isi_data_dibawah_ini_dengan_benar"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewPengajuan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:id="@+id/linearLayoutPesanan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/inputJeniszq"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/nunito_extrabold"
                        android:text="@string/pengajuan"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnshow"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/x25bc"
                        android:textColor="@color/md_theme_light_primary"
                        android:textSize="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_supir"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <Spinner
                        android:id="@+id/inputNamaSupir"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/grey_50"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textbarang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_pengjuan"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textViewInputBarang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/pilih_pengajuan"
                        android:padding="16dp"
                        android:fontFamily="@font/nunito_semibold"
                        android:background="@drawable/rounded_background"
                        android:textColor="@color/black"
                        android:clickable="true"
                        android:focusable="true"/>

                </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alamat"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <Spinner
                            android:id="@+id/inpu_alamat_pengiriman"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:backgroundTint="@color/grey_50"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lokasi_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_marginHorizontal="20dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView_lokasi2"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/lokasi"
                                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                                android:textColor="?attr/colorOnSurface"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/btn_search"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cari" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:baselineAligned="true"
                            android:orientation="horizontal">

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/search"
                                app:endIconMode="clear_text"
                                android:layout_marginEnd="8dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/editTextSearchAlamat"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/nunito_semibold"/>

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_lokasi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone">
                        </androidx.recyclerview.widget.RecyclerView>

                        <androidx.fragment.app.FragmentContainerView
                            android:visibility="gone"
                            android:id="@+id/google_map"
                            android:name="com.google.android.gms.maps.SupportMapFragment"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_marginTop="16dp" />

                            <Button
                                android:visibility="gone"
                                android:id="@+id/btn_set_lokasi"
                                android:layout_width="wrap_content"
                                android:layout_height="50dp"
                                android:layout_gravity="end"
                                android:text="@string/set_lokasi" />

                    </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/catatan"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputCatatan"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/masukan_catatan"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </LinearLayout>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/cardContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCheckout"
                    android:layout_width="141dp"
                    android:layout_height="61dp"
                    android:layout_gravity="right"
                    android:layout_marginEnd="10dp"
                    android:text="@string/masuk"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:theme="@style/Theme.MaterialComponents"
                    app:backgroundTint="@color/grey_50"
                    app:cornerRadius="50dp"
                    app:elevation="5dp" />

            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
